# Enterprise-RAG-For-teams

./: .env.example  .gitignore  Dockerfile  README.md  architecture.md  docker-compose.yml  explanation.md  implementation.md  main.py  prd.md  pyproject.toml  roadmap.md  spec.md  style.md
benchmarks/: latency_results.json  latency_test.py
docs/: partnership.md  project_vision.md
sentinel/: app.py  main.py
sentinel/admin/: router.py  schemas.py  services.py
sentinel/answering/: schemas.py  services.py
sentinel/audits/: router.py  schemas.py  services.py
sentinel/auth/: dependencies.py  router.py  schemas.py  services.py
sentinel/common/: enums.py  exceptions.py  health.py  logging.py
sentinel/config/: settings.py
sentinel/db/: models.py  repositories.py  session.py
sentinel/ingestion/: router.py  schemas.py  services.py
sentinel/portal/: router.py  schemas.py  services.py
sentinel/retrieval/: router.py  schemas.py  services.py
sentinel/templates/: base.html
src/: __init__.py
src/api/: main.py  routes.py  webhook.py
src/config/: settings.py
src/graph/: memory.py  neo4j_store.py
src/ingestion/: git_workspace.py  ingest_repo.py  parser.py  processor.py  service.py
src/llm/: __init__.py  synthesis.py
src/models/: schemas.py
src/query/: agent.py  citations.py  embedding.py  reranker.py  retrieval.py  service.py
src/storage/: chroma_store.py  graph_client.py  memory.py  qdrant_client.py  qdrant_store.py
src/ui/: __init__.py
tests/: eval.py  test_app.py  test_core.py  test_health.py  test_logging.py  test_models.py  test_settings.py
(+8 files in other folders)
