[project]
name = "entreprice-rag-project"
version = "0.1.0"
description = "Project Sentinel — Enterprise RAG intelligence system"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "jinja2>=3.1.0",
    "pydantic-settings>=2.0.0",
    "sqlalchemy>=2.0.29",
    "asyncpg>=0.29.0",
    "pgvector>=0.2.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
]
