[project]
name = "entreprice-rag-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "llama-index-core>=0.14.21",
    "langgraph>=1.1.10",
    "qdrant-client>=1.17.1",
    "tree-sitter>=0.21.3",
    "anthropic>=0.97.0",
    "python-dotenv>=1.0.1",
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
    "google-genai>=1.74.0",
    "pydantic>=2.7.0",
    "voyageai>=0.2.0",
]

[tool.setuptools.packages]
find = {where = ["."], include = ["src*"]}
